// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentDetailsTimeline renders correctly (with a mocked Timeline component) 1`] = `
<div>
  <div
    class="components-card is-size-large css-1xs3c37-CardUI e1q7k77g0"
  >
    <div
      class="components-flex components-card__header is-size-large e1q7k77g1 css-1ufeymn-Flex-HeaderUI eboqfv50"
    >
      Timeline
    </div>
    <div
      class="components-card__body is-size-large css-xmjzce-BodyUI e1q7k77g3"
    >
      <div
        class="woocommerce-timeline"
      >
        <ul>
          <li
            class="woocommerce-timeline-group"
          >
            <p
              class="woocommerce-timeline-group__title"
            >
              April 4, 2020
            </p>
            <ul>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-sync"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4c4.418 0 8 3.582 8 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12c0 4.418 3.582 8 8 8v-2c-3.308 0-6-2.692-6-6z"
                        />
                      </g>
                    </svg>
                    <span>
                      Payment status changed to Disputed: Lost.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    10:56pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-cross is-error"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M18.36 19.78L12 13.41l-6.36 6.37-1.42-1.42L10.59 12 4.22 5.64l1.42-1.42L12 10.59l6.36-6.36 1.41 1.41L13.41 12l6.36 6.36z"
                        />
                      </g>
                    </svg>
                    <span>
                      Dispute lost. The bank ruled in favor of your customer.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    10:56pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-sync"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4c4.418 0 8 3.582 8 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12c0 4.418 3.582 8 8 8v-2c-3.308 0-6-2.692-6-6z"
                        />
                      </g>
                    </svg>
                    <span>
                      Payment status changed to Disputed: Won.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    12:20pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-plus"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M21 13h-8v8h-2v-8H3v-2h8V3h2v8h8v2z"
                        />
                      </g>
                    </svg>
                    <span>
                      $115.00 USD was added to your 
                      <a
                        data-link-type="wc-admin"
                        href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=dummy_po_5eaada696b2d3"
                      >
                        Apr 5, 2020 deposit
                      </a>
                      .
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    12:20pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                >
                  <span>
                    Dispute reversal: $100.00
                  </span>
                  <span>
                    Fee refund: $15.00
                  </span>
                </div>
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-notice-outline is-success"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M12 4c4.41 0 8 3.59 8 8s-3.59 8-8 8-8-3.59-8-8 3.59-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 13h-2v2h2v-2zm-2-2h2l.5-6h-3l.5 6z"
                        />
                      </g>
                    </svg>
                    <span>
                      Dispute won! The bank ruled in your favor.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    12:20pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-sync"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4c4.418 0 8 3.582 8 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12c0 4.418 3.582 8 8 8v-2c-3.308 0-6-2.692-6-6z"
                        />
                      </g>
                    </svg>
                    <span>
                      Payment status changed to Refunded.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    9:51am
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-minus"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M3 11h18v2H3z"
                        />
                      </g>
                    </svg>
                    <span>
                      $100.00 USD will be deducted from a future deposit.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    9:51am
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-checkmark is-success"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M9 19.414l-6.707-6.707 1.414-1.414L9 16.586 20.293 5.293l1.414 1.414"
                        />
                      </g>
                    </svg>
                    <span>
                      A payment of $100.00 USD was successfully refunded.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    9:51am
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                >
                  <span />
                </div>
              </li>
            </ul>
            <hr />
          </li>
          <li
            class="woocommerce-timeline-group"
          >
            <p
              class="woocommerce-timeline-group__title"
            >
              April 3, 2020
            </p>
            <ul>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-sync"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4c4.418 0 8 3.582 8 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12c0 4.418 3.582 8 8 8v-2c-3.308 0-6-2.692-6-6z"
                        />
                      </g>
                    </svg>
                    <span>
                      Payment status changed to Partial refund.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    2:58pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-minus"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M3 11h18v2H3z"
                        />
                      </g>
                    </svg>
                    <span>
                      $50.00 USD will be deducted from a future deposit.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    2:58pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-checkmark is-success"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M9 19.414l-6.707-6.707 1.414-1.414L9 16.586 20.293 5.293l1.414 1.414"
                        />
                      </g>
                    </svg>
                    <span>
                      A payment of $50.00 USD was successfully refunded.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    2:58pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                >
                  <span />
                </div>
              </li>
            </ul>
            <hr />
          </li>
          <li
            class="woocommerce-timeline-group"
          >
            <p
              class="woocommerce-timeline-group__title"
            >
              April 2, 2020
            </p>
            <ul>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-sync"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4c4.418 0 8 3.582 8 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12c0 4.418 3.582 8 8 8v-2c-3.308 0-6-2.692-6-6z"
                        />
                      </g>
                    </svg>
                    <span>
                      Payment status changed to Disputed: In review.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    4:26pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-checkmark is-success"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M9 19.414l-6.707-6.707 1.414-1.414L9 16.586 20.293 5.293l1.414 1.414"
                        />
                      </g>
                    </svg>
                    <span>
                      Challenge evidence submitted.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    4:26pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
            </ul>
            <hr />
          </li>
          <li
            class="woocommerce-timeline-group"
          >
            <p
              class="woocommerce-timeline-group__title"
            >
              April 1, 2020
            </p>
            <ul>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-sync"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4c4.418 0 8 3.582 8 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12c0 4.418 3.582 8 8 8v-2c-3.308 0-6-2.692-6-6z"
                        />
                      </g>
                    </svg>
                    <span>
                      Payment status changed to Disputed: Needs response.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    10:06pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-minus"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M3 11h18v2H3z"
                        />
                      </g>
                    </svg>
                    <span>
                      $110.00 USD will be deducted from a future deposit.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    10:06pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                >
                  <span>
                    Disputed amount: $95.00
                  </span>
                  <span />
                  <span>
                    Fee: $15.00
                  </span>
                </div>
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-cross is-error"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M18.36 19.78L12 13.41l-6.36 6.37-1.42-1.42L10.59 12 4.22 5.64l1.42-1.42L12 10.59l6.36-6.36 1.41 1.41L13.41 12l6.36 6.36z"
                        />
                      </g>
                    </svg>
                    <span>
                      Payment disputed as Fraudulent.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    10:06pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                >
                  <span>
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fdisputes%2Fdetails&id=some_id"
                    >
                      View dispute
                    </a>
                  </span>
                </div>
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-sync"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4c4.418 0 8 3.582 8 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12c0 4.418 3.582 8 8 8v-2c-3.308 0-6-2.692-6-6z"
                        />
                      </g>
                    </svg>
                    <span>
                      Payment status changed to Paid.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    10:37am
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-plus"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M21 13h-8v8h-2v-8H3v-2h8V3h2v8h8v2z"
                        />
                      </g>
                    </svg>
                    <span>
                      $59.50 USD was added to your 
                      <a
                        data-link-type="wc-admin"
                        href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=dummy_po_5eaada696b281"
                      >
                        Apr 2, 2020 deposit
                      </a>
                      .
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    10:37am
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-checkmark is-success"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M9 19.414l-6.707-6.707 1.414-1.414L9 16.586 20.293 5.293l1.414 1.414"
                        />
                      </g>
                    </svg>
                    <span>
                      A payment of $63.00 USD was successfully charged.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    10:37am
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                >
                  <span />
                  <span>
                    Fee: $3.50
                  </span>
                  <span />
                  <span>
                    Net deposit: $59.50 USD
                  </span>
                </div>
              </li>
            </ul>
            <hr />
          </li>
          <li
            class="woocommerce-timeline-group"
          >
            <p
              class="woocommerce-timeline-group__title"
            >
              March 31, 2020
            </p>
            <ul>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-sync"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4c4.418 0 8 3.582 8 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12c0 4.418 3.582 8 8 8v-2c-3.308 0-6-2.692-6-6z"
                        />
                      </g>
                    </svg>
                    <span>
                      Payment status changed to Failed.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    11:35pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-cross is-error"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M18.36 19.78L12 13.41l-6.36 6.37-1.42-1.42L10.59 12 4.22 5.64l1.42-1.42L12 10.59l6.36-6.36 1.41 1.41L13.41 12l6.36 6.36z"
                        />
                      </g>
                    </svg>
                    <span>
                      A payment of $77.00 USD failed.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    11:35pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-sync"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4c4.418 0 8 3.582 8 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12c0 4.418 3.582 8 8 8v-2c-3.308 0-6-2.692-6-6z"
                        />
                      </g>
                    </svg>
                    <span>
                      Payment status changed to Authorization expired.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    5:58pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-cross is-error"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M18.36 19.78L12 13.41l-6.36 6.37-1.42-1.42L10.59 12 4.22 5.64l1.42-1.42L12 10.59l6.36-6.36 1.41 1.41L13.41 12l6.36 6.36z"
                        />
                      </g>
                    </svg>
                    <span>
                      Authorization for $86.00 USD expired.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    5:58pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-sync"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4c4.418 0 8 3.582 8 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12c0 4.418 3.582 8 8 8v-2c-3.308 0-6-2.692-6-6z"
                        />
                      </g>
                    </svg>
                    <span>
                      Payment status changed to Authorization voided.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    6:57am
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-checkmark is-warning"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M9 19.414l-6.707-6.707 1.414-1.414L9 16.586 20.293 5.293l1.414 1.414"
                        />
                      </g>
                    </svg>
                    <span>
                      Authorization for $59.00 USD was voided.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    6:57am
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
            </ul>
            <hr />
          </li>
          <li
            class="woocommerce-timeline-group"
          >
            <p
              class="woocommerce-timeline-group__title"
            >
              March 30, 2020
            </p>
            <ul>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-sync"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4c4.418 0 8 3.582 8 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12c0 4.418 3.582 8 8 8v-2c-3.308 0-6-2.692-6-6z"
                        />
                      </g>
                    </svg>
                    <span>
                      Payment status changed to Authorized.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    1:33pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-checkmark is-warning"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M9 19.414l-6.707-6.707 1.414-1.414L9 16.586 20.293 5.293l1.414 1.414"
                        />
                      </g>
                    </svg>
                    <span>
                      A payment of $79.00 USD was successfully authorized.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    1:33pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
            </ul>
            <hr />
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaymentDetailsTimeline renders error 1`] = `
<div>
  <div
    class="components-card is-size-large css-1xs3c37-CardUI e1q7k77g0"
  >
    <div
      class="components-flex components-card__header is-size-large e1q7k77g1 css-1ufeymn-Flex-HeaderUI eboqfv50"
    >
      Timeline
    </div>
    <div
      class="components-card__body is-size-large css-xmjzce-BodyUI e1q7k77g3"
    >
      Error while loading timeline
    </div>
  </div>
</div>
`;

exports[`PaymentDetailsTimeline renders loading 1`] = `
<div>
  <div
    class="components-card is-size-large css-1xs3c37-CardUI e1q7k77g0"
  >
    <div
      class="components-flex components-card__header is-size-large e1q7k77g1 css-1ufeymn-Flex-HeaderUI eboqfv50"
    >
      <span
        aria-busy="true"
        class="is-loadable-placeholder"
      >
        Timeline
      </span>
    </div>
    <div
      class="components-card__body is-size-large css-xmjzce-BodyUI e1q7k77g3"
    >
      <span
        aria-busy="true"
        class="is-loadable-placeholder is-block"
      >
        <p
          style="line-height: 3;"
        >
          Block placeholder
        </p>
      </span>
      <span
        aria-busy="true"
        class="is-loadable-placeholder is-block"
      >
        <p
          style="line-height: 3;"
        >
          Block placeholder
        </p>
      </span>
      <span
        aria-busy="true"
        class="is-loadable-placeholder is-block"
      >
        <p
          style="line-height: 3;"
        >
          Block placeholder
        </p>
      </span>
      <span
        aria-busy="true"
        class="is-loadable-placeholder is-block"
      >
        <p
          style="line-height: 3;"
        >
          Block placeholder
        </p>
      </span>
    </div>
  </div>
</div>
`;

exports[`PaymentDetailsTimeline renders subscription fee correctly 1`] = `
<div>
  <div
    class="components-card is-size-large css-1xs3c37-CardUI e1q7k77g0"
  >
    <div
      class="components-flex components-card__header is-size-large e1q7k77g1 css-1ufeymn-Flex-HeaderUI eboqfv50"
    >
      Timeline
    </div>
    <div
      class="components-card__body is-size-large css-xmjzce-BodyUI e1q7k77g3"
    >
      <div
        class="woocommerce-timeline"
      >
        <ul>
          <li
            class="woocommerce-timeline-group"
          >
            <p
              class="woocommerce-timeline-group__title"
            >
              October 4, 2021
            </p>
            <ul>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-sync"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4c4.418 0 8 3.582 8 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12c0 4.418 3.582 8 8 8v-2c-3.308 0-6-2.692-6-6z"
                        />
                      </g>
                    </svg>
                    <span>
                      Payment status changed to Paid.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    3:18pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-plus"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M21 13h-8v8h-2v-8H3v-2h8V3h2v8h8v2z"
                        />
                      </g>
                    </svg>
                    <span>
                      $0.66 USD will be added to a future deposit.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    3:18pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-checkmark is-success"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M9 19.414l-6.707-6.707 1.414-1.414L9 16.586 20.293 5.293l1.414 1.414"
                        />
                      </g>
                    </svg>
                    <span>
                      A payment of $1.00 USD was successfully charged.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    3:18pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                >
                  <span />
                  <span>
                    Fee (3.9% + $0.30): $-0.34
                  </span>
                  <span>
                    <ul
                      class="fee-breakdown-list"
                    >
                       
                      <li>
                        Base fee: 2.9% + $0.30
                      </li>
                      <li>
                        Subscription transaction fee: 1%
                      </li>
                       
                    </ul>
                  </span>
                  <span>
                    Net deposit: $0.66 USD
                  </span>
                </div>
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-sync"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4c4.418 0 8 3.582 8 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12c0 4.418 3.582 8 8 8v-2c-3.308 0-6-2.692-6-6z"
                        />
                      </g>
                    </svg>
                    <span>
                      Payment status changed to Authorized.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    3:18pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
              <li
                class="woocommerce-timeline-item"
              >
                <div
                  class="woocommerce-timeline-item__top-border"
                />
                <div
                  class="woocommerce-timeline-item__title"
                >
                  <div
                    class="woocommerce-timeline-item__headline"
                  >
                    <svg
                      class="gridicon gridicons-checkmark is-warning"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M9 19.414l-6.707-6.707 1.414-1.414L9 16.586 20.293 5.293l1.414 1.414"
                        />
                      </g>
                    </svg>
                    <span>
                      A payment of $1.00 USD was successfully authorized.
                    </span>
                  </div>
                  <span
                    class="woocommerce-timeline-item__timestamp"
                  >
                    3:18pm
                  </span>
                </div>
                <div
                  class="woocommerce-timeline-item__body"
                />
              </li>
            </ul>
            <hr />
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
